# p2prng

./: CMakeLists.txt  README.md
src/: p2prng.c  p2prng.h
